# Satellite-DDF

./: .git-blame-ignore-revs  .gitattributes  .gitignore  README.md  alembic.ini  projectile_motion_model.h5  pyproject.toml  requirements.txt  requirements2.txt  requirements_lock.txt  setup.sh
alembic/: README.md  env.py
backend/: README.md  client.py  create_migration.sh  docker-compose.yaml  migrate.sh  schema.py
canonical/: collection.py  comms.py  environment.py  estimator.py  orbit.py  readme.md  satellite.py  sim_config.py  target.py  util.py
common/: click_utils.py  dataclassframe.py  dataclassframe_test.py  linalg.py  path_utils.py  predictors.py  prompt_utils.py  timer.py
misc/: plot_test.py  poliastro_testing.py  test_install.py
nolan/: nnTesting.py  node2node.py  pathOptimize copy.py  pathOptimize.py  pathOptimizeRandom.py  writeup.aux  writeup.tex
phase1/: README.md  commClass.py  environmentClass.py  estimatorClass.py  graphTesting.py  import_libraries.py  main.py  poliastro_test.py  requirements.txt  satelliteClass.py  sensorClass.py  targetClass.py  test.py
phase2/: commClass.py  environmentClass.py  estimatorClass.py  import_libraries.py  main.py  satelliteClass.py  sensorClass.py  targetClass.py
phase3/: __init__.py  collection.py  commClass.py  comms.py  environment.py  environmentClass.py  estimator.py  estimatorClass.py  generate_scenario_data.py  groundStation.py  groundStationClass.py  ground_station.py  main.py  orbit.py  raidRegion.py  satellite.py  satelliteClass.py  sensor.py  sensorClass.py  sim_config.py  target.py  util.py  (+1 more)
(+301 files in other folders)
